inscribir taekwondistas y modificaciones en bases a la correción del dia 30/10/2023

--- a/admin/agregar_taekwondista.html
+++ b/admin/agregar_taekwondista.html
@@ -114,6 +114,10 @@
                       <input type="text" class="form-control" placeholder="Ingrese su apellido">
                     </div>
                   </div>
+                  <div class="form-group">
+                    <label>Correo electronico</label>
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico">
+                  </div>
                   <div class="row">
                     <div class="form-group col-4">
                       <label>DNI</label>
@@ -225,6 +229,20 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Dojang</label>
+                    <select class="form-control select2" style="width: 100%;">
+                      <option disabled selected>Seleccione el dojang</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                    </select>
                   </div>
 
                   <div class="card-footer">
