--- a/admin/editar_taekwondista.html
+++ b/admin/editar_taekwondista.html
@@ -55,9 +55,9 @@
     <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
       <div class="container">
         <a href="#" class="navbar-brand">
-          <img src="../dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: .8">
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <img src="../assets/img/World_Taekwondo.png" alt="Logo" class="brand-image"
+            style="opacity: .8"/>
+          <span class="brand-text font-weight-light">Subsistema taekwondo</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -69,16 +69,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_admin.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_taekwondistas.html" class="nav-link">Taekwondistas</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_dojangs.html" class="nav-link">Dojangs</a>
-            </li>
-            <li class="nav-item">
-              <a href="administrar_solicitudes.html" class="nav-link">Solicitudes</a>
+              <a href="index_admin.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -91,8 +82,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                 <div class="dropdown-divider"></div>
-                <a href="index.html" class="dropdown-item">
-                  <i class="fas fa-user-minus mr-2"></i> Log Out
+                <a href="../index.html" class="dropdown-item">
+                  <i class="fas fa-user-minus mr-2"></i> Cerrar sesión
                 </a>
             </li>
             </li>
@@ -122,6 +113,10 @@
                       <label>Apellido</label>
                       <input type="text" class="form-control" placeholder="Ingrese su apellido" value="Godoy Cabrera">
                     </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Correo electronico</label>
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
                   </div>
                   <div class="row">
                     <div class="form-group col-4">
@@ -238,6 +233,20 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Dojang</label>
+                    <select class="form-control select2" style="width: 100%;">
+                      <option disabled selected>Seleccione el dojang</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option selected>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                    </select>
                   </div>
 
                   <div class="card-footer">
