--- a/admin/ver_solicitud.html
+++ b/admin/ver_solicitud.html
@@ -108,6 +108,7 @@
                         <p>Los datos del usuario nuevo son:</p>
                         <p><b>Nombre:</b> Matias</p>
                         <p><b>Apellido:</b> Godoy</p>
+                        <p><b>Email: </b>matiasgodoy@hotmail.com</p>
                         <p><b>DNI:</b> 12345678</p>
                         <p><b>Peso:</b> 74.3 kg</p>
                         <p><b>Altura:</b> 1.80 m</p>
