--- a/practicante/index_practicante.html
+++ b/practicante/index_practicante.html
@@ -98,7 +98,18 @@
             <div class="container-fluid">
               <!-- Small boxes (Stat box) -->
               <div class="row">
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
+                  <!-- small box -->
+                  <div class="small-box bg-purple">
+                    <div class="inner">
+                      <h3>Inscribirse</h3>
+                      <p>Inscribirse a un Dojang</p>
+                    </div>
+                    <a href="inscribirse.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
+                  </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-info">
                     <div class="inner">
@@ -109,7 +120,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-success">
                     <div class="inner">
@@ -120,7 +131,7 @@
                   </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-lg-4 col-6">
+                <div class="col-lg-6 col-6">
                   <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
@@ -130,7 +141,7 @@
                     <a href="ver_estado_solicitud.html" class="small-box-footer">Mas informacion <i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
-
+                <!-- ./col -->
               </div>
               <!-- /.row -->
             </div><!-- /.container-fluid -->
