--- a/register.html
+++ b/register.html
@@ -39,81 +39,6 @@
                   <label>Apellido</label>
                   <input type="text" class="form-control" placeholder="Ingrese su apellido">
                 </div>
-              <div class="row">
-                <div class="form-group col-4">
-                  <label>DNI</label>
-                  <input type="text" class="form-control" placeholder="Ingrese su DNI">
-                </div>
-                <div class="form-group col-4">
-                  <label for="exampleInputEmail1">Peso (kg)</label>
-                  <input type="text" class="form-control" placeholder="Ingrese su Peso">
-                </div>
-                <div class="form-group col-4">
-                  <label>Altura (cm)</label>
-                  <input type="number" class="form-control" placeholder="Ingrese su Altura">
-                </div>
-              </div>
-              <div class="row">
-                <div class="form-group col-6">
-                  <label>Nacimiento</label>
-                  <div class="input-group date" id="reservationdate" data-target-input="nearest">
-                    <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"
-                      control-id="ControlID-4" placeholder="dd/mm/yyyy" />
-                    <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
-                      <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group col-6">
-                  <label>Nacionalidad</label>
-                  <input type="text" class="form-control" placeholder="Ingrese su Nacionalidad">
-                </div>
-              </div>
-              <div class="form-group">
-                <label>Foto</label>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fas fa-camera"></i></span>
-                  </div>
-                  <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="exampleInputFile" control-id="ControlID-3">
-                    <label class="custom-file-label">Seleccione su foto</label>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label>Número de Teléfono</label>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fas fa-phone"></i></span>
-                  </div>
-                  <input type="text" class="form-control"
-                    data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" inputmode="text"
-                    control-id="ControlID-25" placeholder="(___) ___-____">
-                </div>
-              </div>
-              <div>
-                <label>Contacto de Emergencia:</label>
-                    <div class="form-group">
-                      <label>Nombre</label>
-                      <input type="text" class="form-control" placeholder="Nombre del Contacto de Emergencia">
-                    </div>
-                    <div class="form-group">
-                      <label>Teléfono</label>
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text"><i class="fas fa-phone"></i></span>
-                        </div>
-                        <input type="text" class="form-control"
-                          data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask=""
-                          inputmode="text" control-id="ControlID-25" placeholder="(___) ___-____">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label>Relacion</label>
-                      <input type="text" class="form-control" placeholder="Relacion con el Contacto de Emergencia">
-                    </div>
-              </div>
               <div>
                 <label>Credenciales:</label>
                 <div class="input-group mb-3">
@@ -156,7 +81,7 @@
               </div>
 
             <div class="row">
-              <div class="col-6">
+              <div class="col-8">
                 <div class="icheck-primary">
                   <input
                     type="checkbox"
@@ -170,9 +95,9 @@
                 </div>
               </div>
               <!-- /.col -->
-              <div class="col-6">
+              <div class="col-12">
                 <button type="submit" class="btn btn-primary btn-block">
-                  Registrarme
+                  Solicitar Registro
                 </button>
               </div>
               <!-- /.col -->
