--- a/sabonim/administrar_taekwondistas.html
+++ b/sabonim/administrar_taekwondistas.html
@@ -100,6 +100,11 @@
                         </div>
                       </div>
                       <div class="ml-3">
+                        <a href="inscribir_taekwondistas.html" class="btn btn-primary float-right"><i
+                            class="fas fa-plus"></i>
+                          Inscribir</a>
+                      </div>
+                      <div class="ml-3">
                         <a href="agregar_taekwondista.html" class="btn btn-success float-right"><i
                             class="fas fa-plus"></i>
                           Agregar</a>
@@ -262,6 +267,7 @@
                           <div class="col-6">
                             <p><b>Nombre: </b>Lucas Matias</p>
                             <p><b>Apellido: </b>Godoy</p>
+                            <p><b>Email: </b>matiasgodoy@hotmail.com</p>
                             <p><b>DNI: </b>46629934</p>
                             <p><b>Peso: </b>73.6 kg</p>
                             <p><b>Altura: </b>176 cm</p>
