--- a/sabonim/inscribir_taekwondistas.html
+++ b/sabonim/inscribir_taekwondistas.html
@@ -56,7 +56,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_admin.html" class="nav-link">Inicio</a>
+              <a href="index_sabonim.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -88,7 +88,7 @@
             <div class="col-12 mx-auto">
               <div class="card">
                 <div class="card-header">
-                  <h3 class="card-title">LISTA DE TAEKWONDISTAS</h3>
+                  <h3 class="card-title">LISTA DE TAEKWANDISTAS</h3>
                   <div class="card-tools">
                     <div class="row">
                       <div class="input-group input-group" style="width: 300px;">
@@ -99,12 +99,6 @@
                           </button>
                         </div>
                       </div>
-                      <div class="ml-3">
-                        <a href="agregar_taekwondista.html" class="btn btn-success float-right"><i
-                            class="fas fa-plus"></i>
-                          Agregar</a>
-                      </div>
-
                     </div>
                   </div>
                 </div>
@@ -130,9 +124,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -144,9 +138,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -158,9 +152,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -172,9 +166,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -186,9 +180,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -200,9 +194,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -214,9 +208,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -228,9 +222,9 @@
                         <td class="text-right py-0 align-middle">
                           <div class="btn-group btn-group-sm">
                             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i class="fas fa-eye"></i></button>
-                            <a href="editar_taekwondista.html" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                            <a type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger"><i
-                                class="fas fa-trash"></i></a>
+                            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-success">
+                              <i class="fas fa-plus"></i>
+                            </button>
                           </div>
                         </td>
                       </tr>
@@ -244,7 +238,7 @@
                   <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h4 class="modal-title">Informacion Taekwondista</h4>
+                        <h4 class="modal-title">Informacion Practicante</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -258,9 +252,6 @@
                             <h6>• <b>Nombre: </b>Alicia Cabrera</h6>
                             <h6>• <b>Telefono: </b>(351) 725-5025</h6>
                             <h6>• <b>Relacion: </b>Madre</h6>
-                            <br><br>
-                            <p><b>Dojang: </b>Dojang a todo poder cordobe</p>
-                            <p><b>Instructor: </b>Federico Marquez</p>
                           </div>
                           <div class="col-6">
                             <p><b>Nombre: </b>Lucas Matias</p>
@@ -287,27 +278,29 @@
                 </div>
                 <!-- /.modal -->
 
-                <!-- Modal Eliminar -->
-                <div class="modal fade" id="modal-danger">
+                <div class="modal fade" id="modal-success">
                   <div class="modal-dialog">
-                    <div class="modal-content bg-danger">
+                    <div class="modal-content bg-success">
                       <div class="modal-header">
-                        <h4 class="modal-title">Eliminar Taekwondista</h4>
+                        <h4 class="modal-title">Agregar nuevo taekwondista el Dojang</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
                       </div>
                       <div class="modal-body">
-                        <p>Estas seguro que desea eliminar este Taekwondista? &hellip;</p>
+                        <p>Estas seguro que quiere agregar este practicante a su Dojang?</p>
                       </div>
                       <div class="modal-footer justify-content-between">
                         <button type="button" class="btn btn-outline-light" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-outline-light" data-dismiss="modal">Si</button>
+                        <button type="button" class="btn btn-outline-light" data-dismiss="modal">Agregar</button>
                       </div>
                     </div>
+                    <!-- /.modal-content -->
                   </div>
+                  <!-- /.modal-dialog -->
                 </div>
                 <!-- /.modal -->
+
               </div>
             </div>
             <!-- /.card -->
