--- a/sabonim/ver_datos.html
+++ b/sabonim/ver_datos.html
@@ -106,6 +106,7 @@
                       </div>
                     </div>
                     <p><b>Apellido: </b>Godoy</p>
+                    <p><b>Email: </b>matiasgodoy@hotmail.com</p>
                     <p><b>DNI: </b>46629934</p>
                     <p><b>Peso: </b>73.6 kg</p>
                     <p><b>Altura: </b>176 cm</p>
