--- a/admin/ver_dojang.html
+++ b/admin/ver_dojang.html
@@ -233,6 +233,7 @@
               <div class="col-6">
                 <p><b>Nombre: </b>Lucas Matias</p>
                 <p><b>Apellido: </b>Godoy</p>
+                <p><b>Email: </b>matiasgodoy@hotmail.com</p>
                 <p><b>DNI: </b>46629934</p>
                 <p><b>Peso: </b>73.6 kg</p>
                 <p><b>Altura: </b>176 cm</p>
