--- a/practicante/inscribirse.html
+++ b/practicante/inscribirse.html
@@ -69,7 +69,7 @@
           <!-- Left navbar links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="index_sabonim.html" class="nav-link">Inicio</a>
+              <a href="index_practicante.html" class="nav-link">Inicio</a>
             </li>
           </ul>
 
@@ -100,23 +100,23 @@
           <div class="col-md-12 mx-auto">
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">FORMULARIO PRACTICANTE</h3>
+                <h3 class="card-title">COMPLETE SUS DATOS</h3>
               </div>
               <form>
                 <div class="card-body">
                   <div class="row">
                     <div class="form-group col-6">
                       <label>Nombre</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su nombre">
+                      <input type="text" class="form-control" placeholder="Ingrese su nombre" value="Lucas Matias">
                     </div>
                     <div class="form-group col-6">
                       <label>Apellido</label>
-                      <input type="text" class="form-control" placeholder="Ingrese su apellido">
+                      <input type="text" class="form-control" placeholder="Ingrese su apellido" value="Godoy Cabrera">
                     </div>
                   </div>
                   <div class="form-group">
                     <label>Correo electronico</label>
-                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico">
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
                   </div>
                   <div class="row">
                     <div class="form-group col-4">
@@ -137,7 +137,7 @@
                       <label>Fecha de Nacimiento</label>
                       <div class="input-group date" id="reservationdate" data-target-input="nearest">
                         <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate"
-                          control-id="ControlID-4" placeholder="dd/mm/yyyy" />
+                          control-id="ControlID-4" placeholder="dd/mm/yyyy"/>
                         <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
                           <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
@@ -150,36 +150,12 @@
                     <div class="form-group col-4">
                       <label>Genero</label>
                       <select class="form-control" control-id="ControlID-24">
+                      <option selected="selected">Seleccione una opcion</option>
                       <option>Masculino</option>
                       <option>Femenino</option>
                       <option>Sin especificar</option>
                       </select>
                       </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Categoria</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option disabled selected>Seleccione el color del cinto</option>
-                      <option>Blanco</option>
-                      <option>Blanco punta Amarilla</option>
-                      <option>Amarillo</option>
-                      <option>Amarillo punta Verde</option>
-                      <option>Verde</option>
-                      <option>Verde punta Azul</option>
-                      <option>Azul</option>
-                      <option>Azul punta Roja</option>
-                      <option>Roja</option>
-                      <option>Roja punta Negra</option>
-                      <option>Negro I</option>
-                      <option>Negro II</option>
-                      <option>Negro III</option>
-                      <option>Negro IV</option>
-                      <option>Negro V</option>
-                      <option>Negro VI</option>
-                      <option>Negro VII</option>
-                      <option>Negro VIII</option>
-                      <option>Negro IX</option>
-                    </select>
                   </div>
                   <div class="form-group">
                     <label>Foto</label>
@@ -188,7 +164,8 @@
                         <span class="input-group-text"><i class="fas fa-camera"></i></span>
                       </div>
                       <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="exampleInputFile" control-id="ControlID-3">
+                        <input type="file" class="custom-file-input" id="exampleInputFile" control-id="ControlID-3"
+                          value="/dist/img/user1-128x128">
                         <label class="custom-file-label">Seleccione su foto</label>
                       </div>
                     </div>
@@ -230,24 +207,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="form-group">
-                    <label>Dojang</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option disabled selected>Seleccione el dojang</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                      <option>Dojang el poder cordobe</option>
-                    </select>
-                  </div>
 
                   <div class="card-footer">
                     <button type="submit" class="btn btn-default" control-id="ControlID-10">Cancelar</button>
-                    <button type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Guardar</button>
+                    <a href="listar_dojangs.html" type="submit" class="btn btn-primary float-right" control-id="ControlID-9">Siguiente</a>
                   </div>
               </form>
             </div>
