--- a/practicante/modificar_datos.html
+++ b/practicante/modificar_datos.html
@@ -114,6 +114,10 @@
                       <input type="text" class="form-control" placeholder="Ingrese su apellido" value="Godoy Cabrera">
                     </div>
                   </div>
+                  <div class="form-group">
+                    <label>Correo electronico</label>
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
+                  </div>
                   <div class="row">
                     <div class="form-group col-4">
                       <label>DNI</label>
@@ -151,31 +155,6 @@
                       <option>Sin especificar</option>
                       </select>
                       </div>
-                  </div>
-                  <div class="form-group">
-                    <label>Categoria</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option disabled>Seleccione el color del cinto</option>
-                      <option>Blanco</option>
-                      <option>Blanco punta Amarilla</option>
-                      <option>Amarillo</option>
-                      <option selected>Amarillo punta Verde</option>
-                      <option>Verde</option>
-                      <option>Verde punta Azul</option>
-                      <option>Azul</option>
-                      <option>Azul punta Roja</option>
-                      <option>Roja</option>
-                      <option>Roja punta Negra</option>
-                      <option>Negro I</option>
-                      <option>Negro II</option>
-                      <option>Negro III</option>
-                      <option>Negro IV</option>
-                      <option>Negro V</option>
-                      <option>Negro VI</option>
-                      <option>Negro VII</option>
-                      <option>Negro VIII</option>
-                      <option>Negro IX</option>
-                    </select>
                   </div>
                   <div class="form-group">
                     <label>Foto</label>
