--- a/practicante/ver_estado_solicitud.html
+++ b/practicante/ver_estado_solicitud.html
@@ -129,6 +129,13 @@
                         <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i
                               class="fas fa-eye"></i></button></td>
                       </tr>
+                      <tr>
+                        <td>4.</td>
+                        <td>Solicitud de incripcion a Dojang</td>
+                        <td><span class="badge bg-success">Aprobada</span></td>
+                        <td><button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal-lg"><i
+                              class="fas fa-eye"></i></button></td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
@@ -167,6 +174,7 @@
               <div class="col-6">
                 <p><b>Nombre: </b>Lucas Matias</p>
                 <p><b>Apellido: </b>Godoy</p>
+                <p><b>Email: </b>matiasgodoy@hotmail.com</p>
                 <p><b>DNI: </b>46629934</p>
                 <p><b>Peso: </b>73.6 kg</p>
                 <p><b>Altura: </b>176 cm</p>
