--- a/sabonim/editar_taekwondista.html
+++ b/sabonim/editar_taekwondista.html
@@ -114,6 +114,10 @@
                       <input type="text" class="form-control" placeholder="Ingrese su apellido" value="Godoy Cabrera">
                     </div>
                   </div>
+                  <div class="form-group">
+                    <label>Correo electronico</label>
+                    <input type="text" class="form-control" placeholder="Ingrese su correo electronico" value="lucasmgodoycabrera@hotmail.com">
+                  </div>
                   <div class="row">
                     <div class="form-group col-4">
                       <label>DNI</label>
@@ -229,6 +233,20 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div class="form-group">
+                    <label>Dojang</label>
+                    <select class="form-control select2" style="width: 100%;">
+                      <option disabled selected>Seleccione el dojang</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option selected>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                      <option>Dojang el poder cordobe</option>
+                    </select>
                   </div>
 
                   <div class="card-footer">
